# headless-knowledge-base

./: .env.e2e.example  .env.e2e.staging.example  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  NEO4J_FIX_DOCUMENTATION.md  README.md  TEST_REPORT.md  check_job.sh  cloudbuild.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: auto-merge.yml  ci.yml
.scratch/: backfill_entity_type.py
deploy/docker/: Dockerfile.jobs  Dockerfile.mcp  Dockerfile.slack
deploy/scripts/: build-push.sh  clear-neo4j-staging.sh  deploy.sh  dr-recovery-test.sh  run-intake-test.sh  run-job.sh  setup-gcp.sh  setup-iap-secrets.sh  sync-prod-to-staging.sh  test-intake-pipeline.sh  update-secret-values.sh
deploy/terraform/: backup.tf  cloudrun-chromadb.tf  main.tf  (+19 more)
docs/: ARCHITECTURE.md  CI_IMPLEMENTATION_PLAN.md  GRAPH_DATABASE_PLAN.md  INTAKE_TESTING.md  NEO4J_FIX_DOCUMENTATION.md  RUNNING_INTAKE_TEST.md  SLACK_APP_SETUP.md  WEB_UI_ACCESS.md
plan/: ARCHIVE_original_plan.md  DEVELOPMENT_PLAN.md  MASTER_PLAN.md  PLAN.md  PROGRESS.md
scripts/: ai_reviewer.py  resync_to_graphiti.py  security_reviewer.py  setup-e2e-env.sh  test-neo4j-connection.py
tests/: __init__.py  run_e2e_tests.sh  test_auth.py  test_chunking.py  test_config_gemini.py  test_confluence_models.py  test_connection_retry.py  test_db_models.py  test_doc_creation_handlers.py  test_documents.py  test_evaluation.py  test_governance.py  test_graph.py  test_graphiti.py  test_health.py  test_knowledge_creation.py  test_llm.py  test_markdown_converter.py  test_metadata.py  test_vectorstore.py  test_web.py
(+280 files in other folders)
